# breadthw

./: README.md  bench_mem.sh  breadthw.cabal
app/: Main.hs
scripts/: tmux-menu
src/: Breadthw.hs  Main.hs
src/Breadthw/: ZipTree.hs
test/: Bench.hs  Spec.hs
test/Tree/: Gen.hs
test/ZipTree/: Gen.hs
