name:                breadthw
version:             0.1.0.0
synopsis:            Walk files/dirs breadth-first
description:         Please see README.md
homepage:            https://github.com/lbonn/breadthw#readme
license:             BSD3
author:              lbonn
copyright:           2016 lbonn
category:            Shell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable breadthw
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7 && < 0.6,
                       directory >= 1.2.6 && < 1.3.0,
                       optparse-applicative >= 0.12.1 && < 0.13,
                       pipes >= 4.1.0 && < 4.2,
                       protolude >= 0.1.6 && < 0.2,
                       text >= 1.2.2.1 && < 1.3
  default-extensions:  OverloadedStrings, NoImplicitPrelude
