name:                breadthw
version:             0.1.0.0
synopsis:            Walk files/dirs breadth-first
description:         Please see README.md
homepage:            https://github.com/lbonn/breadthw#readme
license:             BSD3
author:              lbonn
copyright:           2016 lbonn
category:            Shell
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Breadthw
                     , Breadthw.ZipTree
  ghc-options:         -W -Wall
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7 && < 0.6
                     , directory >= 1.3.0 && < 1.4
                     , pipes >= 4.1.0 && < 4.4
                     , protolude >= 0.1.6 && < 0.2
                     , text >= 1.2.2.1 && < 1.3
                     , transformers >= 0.5.2.0 && < 0.6
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

executable breadthw-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , breadthw
                     , optparse-applicative >= 0.12.1 && < 0.14
                     , pipes >= 4.1.0 && < 4.4
                     , protolude >= 0.1.6 && < 0.2
                     , text >= 1.2.2.1 && < 1.3
  default-extensions:  OverloadedStrings, NoImplicitPrelude

test-suite breadthw-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Tree.Gen
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , breadthw
                     , containers >= 0.5.7 && < 0.6
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -W -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude

benchmark breadthw-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Bench.hs
  other-modules:       Tree.Gen
  build-depends:       base >= 4.7 && < 5
                     , protolude
                     , breadthw
                     , containers >= 0.5.7 && < 0.6
                     , criterion
                     , QuickCheck
  ghc-options:         -W -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude
